# UCalculator

./: CMakeLists.txt  README.md  Universal_Calculator.pro
AControl/: AControl.h  control.h
AControl/CControl/: ccontrol.h
AControl/FControl/: fcontrol.h
AControl/PControl/: pcontrol.h
AEditor/: AEditor.cpp  editor.h
AEditor/FEditor/: feditor.cpp
AEditor/PEditor/: peditor.cpp  peditor.h
App/: mainwindow.cpp
Control/: AControl.h  ccontrol.cpp  ccontrol.h  fcontrol.cpp  fcontrol.h  pcontrol.cpp  pcontrol.h
Converter/: converter_10_p.h  converter_p_10.cpp  converter_p_10.h
Editor/: AEditor.h  ceditor.h
History/: history.h
MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Memory/: memory.h
Number/: TANumber.h  cnumber.cpp  cnumber.h  fnumber.cpp  fnumber.h  pnumber.cpp  pnumber.h
Processor/: processor.h
TANumber/: TANumber.h
TANumber/CNumber/: cnumber.h
TANumber/FNumber/: fnumber.h
include/: ccontrol.h  fcontrol.h  history.h  input_line_edit.h  mainwindow.h  memory.h
src/: ceditor.cpp  converter_10_p.cpp
src/app/: CMakeLists.txt  mainwindow.ui
src/control/: CMakeLists.txt  pcontrol.h
src/converter/: CMakeLists.txt
src/editor/: CMakeLists.txt  feditor.h
src/history/: CMakeLists.txt
src/line_edit/: CMakeLists.txt
src/memory/: CMakeLists.txt
src/numbers/: CMakeLists.txt  cnumber.h  pnumber.h
src/processor/: CMakeLists.txt
